added endpoint to retrieve a specific textbook. cant test this just yet.
